# tw2

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST_MATRIX.md  problem2.txt  problemv01.txt
apps/api/: pyproject.toml
apps/api/app/: config.py  crypto.py  db.py  main.py  models.py  schema_upgrade.py  schemas.py  security.py  timeutil.py
apps/api/app/routers/: admin.py  auth.py  battles.py  cohorts.py  feedback.py  graders.py  infras.py  initiative.py  leaderboard.py  llm.py  me.py  monitoring.py  scenarios.py  training.py  users.py
apps/api/app/services/: _opensearch_http.py  assessor_client.py  attacker_provision.py  audit.py  auto_monitor.py  battle_service.py  battlefield.py  check_compiler.py  cohort_service.py  dry_run.py  event_analyzer.py  feedback.py  google_auth.py  grader.py  graders.py  hints.py  infra_render.py  lab_monitor.py  lecture_context.py  provisioner.py  rate_limit.py  reco.py  scenario_gen.py  scenario_jobs.py  scenario_loader.py  scrap_crawler.py  siem_export.py  six_client.py  six_smoke.py  workbook.py
deploy/: el34-assessor.service
docs/: architecture.md  bastion-reference.md  battle-reference-passes.md  battle-results.md  battle-verification.md  central_siem.md  cohort-siem-setup.md  manual_admin.md  manual_instructor.md  manual_student.md  manuals.md  operations.md  rebuild_prompt_250603.md  roadmap.md
infra/: docker-compose.yml
scripts/: backfill_siem.py  bootstrap.sh  dev.sh  e2e_cohort_cross_infra.sh  e2e_full_duel.sh  e2e_full_duel_run.sh  e2e_identity_only.sh  el34_adapt.py  el34_assessor.py  el34_ipfix.py  el34_sites.py  (+27 more)
(+1172 files in other folders)
