[project]
name = "tubewar-api"
version = "0.1.0"
description = "tubewar central API — 6v6-based cyber battle platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.1",
    "email-validator>=2.1",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.7",
    "httpx>=0.26",
    "asyncssh>=2.14",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
